--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
   flutter_svg: ^2.0.16
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
